--- a/jenkins-app/manifests/dev/app.yml
+++ b/jenkins-app/manifests/dev/app.yml
@@ -1,14 +1,14 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: jenkinsapp-cicd
+  name: dev-app
   labels:
-    name: jenkinsapp-cicd
+    name: dev-app
 spec:
   replicas: 1
   selector:
     matchLabels:
-      name: jenkinsapp-cicd
+      name: dev-app
   minReadySeconds: 60
   strategy:
     type: RollingUpdate
@@ -18,21 +18,21 @@ spec:
   template:
     metadata:
       labels:
-        name: jenkinsapp-cicd
+        name: dev-app
     spec:
       containers:
-      - name: jenkinsapp-cicd
-        image: gcr.io/cloudorbit/rohan-ci-cd/jenkins-cicd/dev/jenkinsapp:latest
+      - name: test
+        image: gcr.io/cloudorbit/app/dev/jenkinsapp:latest
         imagePullPolicy: Always
 
 ---
 kind: Service
 apiVersion: v1
 metadata:
-  name: jenkinsapp-cicd
+  name: dev-app
 spec:
   selector:
-    name: jenkinsapp-cicd
+    name: dev-app
   ports:
     - name: port1
       protocol: TCP
@@ -44,12 +44,12 @@ spec:
 apiVersion: autoscaling/v1
 kind: HorizontalPodAutoscaler
 metadata:
-  name: jenkinsapp-cicd
+  name: dev-app
 spec:
   maxReplicas: 3
   minReplicas: 1
   scaleTargetRef:
-    apiVersion: extensions/v1beta1
+    apiVersion: apps/v1
     kind: Deployment
-    name: jenkinsapp-cicd
+    name: dev-app
   targetCPUUtilizationPercentage: 80
