--- a/jenkins-app/manifests/uat/app.yml
+++ b/jenkins-app/manifests/uat/app.yml
@@ -21,7 +21,7 @@ spec:
         name: uat-app
     spec:
       containers:
-      - name: test
+      - name: dev-app
         image: gcr.io/cloudorbit/app/uat/jenkinsapp:latest
         imagePullPolicy: Always
 
