--- a/jenkins-app/Jenkinsfile
+++ b/jenkins-app/Jenkinsfile
@@ -61,6 +61,14 @@ spec:
         JenkinsDockerGCRSecret = credentials('jenkins-docker-gcr-secret')
     }
     stages {
+        stage ('Pre Actions-Build Started') {
+            steps {
+                slackSend (
+                  color: '#F7A200' ,
+                  message: "Hey, your CI/CD trigger has *Started* \n*Trigger: * `${env.JOB_NAME}` #${env.BUILD_NUMBER}\n<${env.BUILD_URL}|OPEN JENKINS BUILD>\n*GitHub: * ${GIT_BRANCH} >> <${GIT_URL}|Open Github>" 
+                )
+            }
+        }
         stage ('git clone - master') {
             when {
                 branch 'master'
@@ -174,5 +182,19 @@ spec:
                 }
             }
         }
-    }  
+    }
+    post {
+        success {
+            slackSend (
+                color: '#00FF00', 
+                message: "Hurray! CI/CD is *Success* \n*Trigger: * `${env.JOB_NAME}` #${env.BUILD_NUMBER}\n<${env.BUILD_URL}|OPEN JENKINS BUILD>\n*GitHub: * ${GIT_BRANCH} >> <${GIT_URL}|Open Github>"
+            )
+        }
+        failure {   
+            slackSend (
+                color: '#FF0000', 
+                message: "Oops, something's wrong; CI/CD *Failed* \n*Trigger: * `${env.JOB_NAME}` #${env.BUILD_NUMBER}\n<${env.BUILD_URL}|OPEN JENKINS BUILD>\n*GitHub: * ${GIT_BRANCH} >> <${GIT_URL}|Open Github>"
+            )
+        }
+    }
 }
